# term_paper_zaberov_bd_5

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/conf/: config.py  constants.py  database.ini  db.sql  dbcreate.sql  dbcreatetables.sql  dbinserttables.sql
src/utils/: areas.py  creationdb.py  dbmanager.py  utils.py  vacancies.py
