[tool.poetry]
name = "term-paper-zaberov-bd-5"
version = "0.1.0"
description = ""
authors = ["zaberov.dv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
requests = "^2.31.0"
loguru = "^0.7.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
